--- a/_config.yml
+++ b/_config.yml
@@ -26,17 +26,17 @@ blog:
 
 # Author info
 author:
-  fullname                  : Your Name
+  fullname                  : Sana
   rss                       : true # generate RSS feed and show it's icon in header
-  mail                      : your@email.com # change to your e-mail address
-  twitter                   : twitter-user-name
-  github                    : github-user-name
-  youtube                   : youtube-user-name
-  stackoverflow             : stackoverflow-user-name
-  disqus                    : dactl # your disqus site name
-  google_analytics          : # 'UA-XXXXXXXX-X'
-  photo                     : "uploads/me2.png"
-  photo2x                   : "uploads/me.png"
+  mail                      : sanalee@snu.ac.kr # change to your e-mail address
+  # twitter                   : twitter-user-name
+  github                    : sanajlee
+  # youtube                   : youtube-user-name
+  # stackoverflow             : stackoverflow-user-name
+  # disqus                    : dactl # your disqus site name
+  # google_analytics          : # 'UA-XXXXXXXX-X'
+  # photo                     : "uploads/me2.png"
+  # photo2x                   : "uploads/me.png"
 
 
 
