--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ blog:
 # Author info
 author:
   fullname                  : Sana
-  rss                       : true # generate RSS feed and show it's icon in header
+  # rss                       : true # generate RSS feed and show it's icon in header
   mail                      : sanalee@snu.ac.kr # change to your e-mail address
   # twitter                   : twitter-user-name
   github                    : sanajlee
