--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ blog:
                                sancl
 
 # Layout configuration
-  logo_path                  : "assets/img/dactl.svg" # path to logo file
+  logo_path                  : "assets/img/bolt3-svgrepo-com.svg" # path to logo file
   search_path                : # "yourgitusername.github.io"
                                # needed for searchbox in archive page
   hero_layout                : true # turn on hero layout for blog and posts
